--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -12,7 +12,7 @@
     text-transform: uppercase;
     font-family: poppins;
     font-size: 1.2rem;
-    /* margin-bottom: 10px; */
+    margin-bottom: 10px !important;
     font-weight: 600;
     /* padding: 1rem; */
 }
