--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,16 +1,104 @@
-/* Navbar.css */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+
+.main .line {
+  background: rgb(74, 119, 187);
+  height: 0.8vh;
+}
 
 .main .links {
   display: flex;
+  justify-content: space-between;
+  padding: 0 5%;
+  align-items: center;
+  background:rgb(40, 93, 172);
 }
+
+.main .links .left, .main .links .right{
+  display: flex;
+  gap: .5rem;
+  color: white;
+}
+
+.main .links .left a, .main .links .right a{
+  color: white;
+  text-decoration: none;
+}
+
+.main .navbar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5.6rem;
+  gap: 10%;
+  position: relative;
+}
+
+.main .navbar #logo{
+  height: 100%;
+  cursor: pointer;
+}
+
+.main .navbar .nav-items{
+  display: flex;
+  align-items: center;
+  gap: 3rem
+}
+
+.main .navbar .responsive-icon{
+  display: none;
+}
+
+.main .navbar .nav-items .item{
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 1.25rem;
+  transition: .3s ease-in-out;
+}
+
+.main .navbar .nav-items .item:hover{
+  color: #00bcd4;
+}
+
+
+
+@media screen and (max-width: 800px) {
+  .main .navbar .responsive-icon{
+    display: flex;
+  }
+
+  .main .navbar .responsive-icon:active ~ .main .navbar .nav-items{
+    display: flex !important;
+    flex-direction: column;
+    position: absolute;
+    top: 3rem;
+    z-index: 100;
+  }
+
+  .main .navbar .nav-items{
+    display: none;
+  }
+
+  .main .navbar{
+    justify-content: space-between;
+    padding: 0 5%;
+  }
+
+
+}
+
+
+
+
+
+/* 
+
 .main .links .links-1 a{
   font-family: 'poppins',sans-serif;
   font-size: 15px;
 }
 
 .links-1 li:nth-child(3) {
-  margin-left: 700px;
+  margin-left: 0;
 }
 
 .main .links ul {
@@ -33,18 +121,12 @@
 }
 
 .main .links {
-  background:rgb(40, 93, 172);
+  
   height: 5vh;
 }
 
-.main .line {
-  background: rgb(74, 119, 187);
-  height: 0.8vh;
-}
 
-/* .main .line-2{
-  background: linear-gradient(176deg, rgba(99,200,200,1) 0%, rgba(83,152,185,1) 43%, rgba(27,167,204,1) 83%, rgba(21,147,180,1) 100%);  height: 0.8vh;
-} */
+
 .navbar-list li .hover-links {
   color: white;
   display: none;
@@ -60,14 +142,13 @@
 
 .navbar {
   background-color: #ffffff;
-  /* Background color for the navbar */
+  
   color: #fff;
-  /* Text color for the navbar */
+
   display: flex;
   justify-content: center;
-  /* Align the items to the right */
+ 
   align-items: center;
-  padding: 10px;
   height: 12vh;
 }
 
@@ -77,7 +158,7 @@
   padding: 0;
   display: flex;
   gap: 30px;
-  /* Space between navbar items */
+  
   align-items: center;
 }
 
@@ -107,10 +188,11 @@
 }
 
 .navbar-list li:nth-child(2) {
-  margin-left: 300px;
+  margin-left: 10%
+  
 }
 
 .navbar-list li a:hover {
   color: #00bcd4;
-  /* Text color for links on hover */
-}
+  
+} */
