--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -44,8 +44,18 @@
   gap: 3rem
 }
 
-.main .navbar .responsive-icon{
+.main .navbar .nav-item-hidden{
+  display: flex;
+  align-items: center;
+  gap: 3rem
+}
+
+.main .navbar #responsive-icon{
   display: none;
+}
+
+.main .navbar #responsive-icon #icon{
+  opacity: 0;
 }
 
 .main .navbar .nav-items .item{
@@ -62,20 +72,20 @@
 
 
 @media screen and (max-width: 800px) {
-  .main .navbar .responsive-icon{
+  .main .navbar #responsive-icon{
     display: flex;
   }
 
-  .main .navbar .responsive-icon:active ~ .main .navbar .nav-items{
-    display: flex !important;
+  .main .navbar .nav-items{
+    display: flex;
     flex-direction: column;
     position: absolute;
-    top: 3rem;
+    top: 5.9rem;
     z-index: 100;
-  }
-
-  .main .navbar .nav-items{
-    display: none;
+    background-color: white;
+    gap: 1rem;
+    width: 100%;
+    left: 0;
   }
 
   .main .navbar{
@@ -83,6 +93,9 @@
     padding: 0 5%;
   }
 
+  .main .navbar .nav-item-hidden{
+    display: none;
+  }
 
 }
 
