--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   padding: 0 5%;
   align-items: center;
+  height: 5vh;
   background:rgb(40, 93, 172);
 }
 
@@ -28,7 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 5.6rem;
+  height: 6rem;
   gap: 10%;
   position: relative;
 }
