--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -1,41 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 .container .heading-1 {
-    text-align: center;
     padding-top: 5rem;
     text-transform: uppercase;
-    font-family: 'poppins', sans-serif;
-    font-size: 2rem;
     color:rgba(122, 121, 121, 0.733);
-    font-weight: bold;
-
 }
 
 .container .paraone {
-    text-align: center;
-    font-size: 2.5rem;
-    font-weight: 700;
     padding-top: 3rem;
-    font-family: 'Poppins', sans-serif;
     padding-bottom: 3rem;
 
 }
 
 .container .big {
-    text-align: center;
-    padding-bottom: 2rem;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
     color: grey;
     line-height: normal;
+    padding: 0 2% 2rem 2%;
 }
 
 .container .big .orange-1 {
     color: orange;
-    font-weight: 600;
 }
 
-.box {
+.container .box {
     background-image: url(../Images/cube.jpg);
     display: flex;
     flex-wrap: wrap;
@@ -43,27 +29,20 @@
     align-items: center;
     background-position: center;
     background-size: cover;
-    height: 90vh;
-    padding-top: 4rem;
+    padding: 4rem 0;
     margin-top: 4rem;
-    gap: 1.5rem;
-    padding-bottom: 4rem;
-
+    gap: 1.75rem;
 }
 
-.box .card {
+.container .box .card {
     padding: 2.5rem 2rem;
     border-radius: 10px;
     background: linear-gradient(176deg, rgba(145,196,242,1) 0%, rgba(225,239,251,1) 52%, rgba(194,220,242,1) 100%, rgba(27,167,204,1) 100%);
-    max-width: 22vw;
+    width: max(300px, 30vw);
     text-align: center;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    height: 14vw;
-    font-size: 1rem;
-    font-family: 'poppins', sans-serif;
-
 }
 
 .container .grid {
@@ -85,10 +64,7 @@
 
 .container .right .right-2 {
     text-transform: capitalize;
-    font-family: 'poppins', sans-serif;
-    font-size: 1.5rem;
     color: rgba(128, 128, 128, 0.372);
-    font-weight: bold;
     margin-bottom: 25px;
     padding-top: 25px;
 
@@ -96,13 +72,10 @@
 
 .container .right .right-3 .orange {
     color: orange;
-    font-weight: 600;
 }
 
 .container .right .right-1 {
-    font-size: 38px;
     line-height: 50px;
-    font-family: 'poppins', sans-serif;
     margin-bottom: 40px;
     font-weight: bold;
 }
@@ -150,4 +123,18 @@
     cursor: pointer;
     font-size: 16px;
     /* Adjust font size as needed */
+}
+
+@media screen and (max-width: 800px) {
+    .container .grid{
+        flex-direction: column;
+    }
+
+    .container .grid>div {
+        width: 100%;
+    }
+
+    .container .grid .right{
+        padding: 0 2rem;
+    }
 }
