--- a/src/components/Corousel/corousel.css
+++ b/src/components/Corousel/corousel.css
@@ -1,13 +1,7 @@
-.image{
-    display: flex;
-    max-width: 100%;
+.carousel {
+    height: 41vw;
+}
 
-}
-.image .imageone{
-    width:100%;
-    height:auto;
-    
-}
-.first .second .third{
-    height: 90vh;
+.carousel .second{
+    height: 100%;
 }
