--- a/src/Home/home.css
+++ b/src/Home/home.css
@@ -2,7 +2,7 @@
 .container .heading-1 {
     padding-top: 5rem;
     text-transform: uppercase;
-    color:rgba(122, 121, 121, 0.733);
+    color:rgb(40, 93, 172);
 }
 
 .container .paraone {
